# MudMind

./: .gitignore  Architect.txt  FileList.txt  LICENSE  Logic.txt  MVP.txt  MVP_CheckList.txt  README.md  activate.bat  activate.ps1  architect.txt  environment.yml  make.bat  pyproject.toml  requirements-dev.txt  setup_gpu_win.bat  test_model.py  test_model_2.py  test_model_3.py
data/: README.txt
data/configs/: ai_profiles.json  default_rules.json  default_settings.json  mud_servers.json  user_rules.json
packaging/hooks/: hook-dearpygui.py  hook-llama_cpp.py  hook-sqlalchemy.py
packaging/resources/: version_info.txt
resources/themes/: classic.json  dark.json  light.json
src/: README.txt
src/mudmind/: __init__.py  __main__.py
src/mudmind/core/: __init__.py  event_bus.py  knowledge_base.py  mud_client.py  state_manager.py
src/mudmind/core/ai/: __init__.py  context_manager.py  decision_maker.py  fallback_handler.py  mode_controller.py  model_router.py  orchestrator.py  prompt_builder.py  (+1 more)
src/mudmind/domain/: __init__.py  commands.py  events.py  exceptions.py  mud_models.py  priority_levels.py  rules.py  state.py
src/mudmind/gui/: __init__.py  event_handlers.py  main_window.py  themes.py  widgets.py
src/mudmind/utils/: __init__.py  config.py  logging.py  parsers.py  paths.py  validators.py
tools/analysis/: analyze_logs.py
tools/dataset_tools/: collect_logs.py  label_ui.py  validate_dataset.py
tools/model_tools/: evaluate_model.py  export_for_runtime.py  quantize_gguf.py  train_lora.py
tools/mud_simulator/: fake_server.py  scenario_player.py
(+14 files in other folders)
