[tool.poetry]
name = "mudmind"
version = "0.1.0"
description = "Cooperative MUD client with AI assistant"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dearpygui = "^1.10.1"
llama-cpp-python = {version = "^0.2.89", extras = ["cuda"]}  # With CUDA support
sqlalchemy = "^2.0.23"
aiosqlite = "^0.19.0"
asyncio = {version = "^3.4.3", python = "<3.12"}  # If needed for compatibility

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"